modules/security_group/main.tf
# create security group for the application load balancer
resource "aws_security_group" "alb_security_group" {
    name        = "ec2/alb security group"
    description = "enable http/https access on port 80/443"
    vpc_id      = var.vpc_id

    ingress {
        description = "http access"
        to_port = 80
        from_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "https access"
        to_port = 443
        from_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "ec2/alb security group"
  }
}
